feat: add dynamic rain effect with wind simulation and canvas rendering

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- Hero Section -->
         <section class="hero" id="home" aria-labelledby="hero-title">
             <div class="hero-content">
-                <h2 id="hero-title" class="hero-title">四季を奏でる AI 音楽アーティスト</h2>
+                <h2 id="hero-title" class="hero-title">四季を奏でる<br>AI 音楽アーティスト</h2>
                 <p class="hero-subtitle">日本の情緒と現代サウンドデザインが織りなす<br>新しい音楽体験</p>
                 <div class="hero-actions">
                     <button class="cta-button primary" onclick="scrollToSection('gallery')" aria-label="季節のギャラリーを見る">
