--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     
     <!-- DNS prefetch for external resources if any -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
-        <!-- WINDSURF_START Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-        <!-- WINDSURF_END Fonts -->
+    <!-- WINDSURF_START Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap" rel="stylesheet">
+    <!-- WINDSURF_END Fonts -->
     
     <!-- Resource hints for seasonal images -->
     <link rel="prefetch" href="./img/秀歌-春.png" as="image">
