--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- WINDSURF_START Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Yuji+Syuku&display=swap" rel="stylesheet">
     <!-- WINDSURF_END Fonts -->
     
     <!-- Resource hints for seasonal images -->
