feat: enhance gallery UI with video support and responsive layout improvements

--- a/index.html
+++ b/index.html
@@ -169,10 +169,16 @@
                     <!-- Spring Content -->
                     <div class="season-panel active" id="spring-content" role="tabpanel" aria-labelledby="spring-tab" data-season="spring">
                         <div class="season-visual">
-                            <picture>
-                                <source srcset="./img/秀歌-春.webp" type="image/webp">
-                                <img src="./img/秀歌-春.webp" alt="春をテーマにした秀歌の画像" loading="lazy" class="season-image" width="600" height="400">
-                            </picture>
+                            <video 
+                                class="season-video" 
+                                controls 
+                                preload="metadata"
+                                loading="lazy"
+                                tabindex="0"
+                                aria-label="春をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩.mp4" type="video/mp4">
+                                お使いのブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                         <div class="season-tracks">
                             <h3 class="season-title">春の調べ</h3>
@@ -205,10 +211,16 @@
                     <!-- Summer Content -->
                     <div class="season-panel" id="summer-content" role="tabpanel" aria-labelledby="summer-tab" data-season="summer">
                         <div class="season-visual">
-                            <picture>
-                                <source srcset="./img/秀歌-夏.webp" type="image/webp">
-                                <img src="./img/秀歌-夏.webp" alt="夏をテーマにした秀歌の画像" loading="lazy" class="season-image" width="600" height="400">
-                            </picture>
+                            <video 
+                                class="season-video" 
+                                controls 
+                                preload="metadata"
+                                loading="lazy"
+                                tabindex="0"
+                                aria-label="夏をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩_web.mp4" type="video/mp4">
+                                お使いのブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                         <div class="season-tracks">
                             <h3 class="season-title">夏の響き</h3>
@@ -241,10 +253,16 @@
                     <!-- Autumn Content -->
                     <div class="season-panel" id="autumn-content" role="tabpanel" aria-labelledby="autumn-tab" data-season="autumn">
                         <div class="season-visual">
-                            <picture>
-                                <source srcset="./img/秀歌-秋.webp" type="image/webp">
-                                <img src="./img/秀歌-秋.webp" alt="秋をテーマにした秀歌の画像" loading="lazy" class="season-image" width="600" height="400">
-                            </picture>
+                            <video 
+                                class="season-video" 
+                                controls 
+                                preload="metadata"
+                                loading="lazy"
+                                tabindex="0"
+                                aria-label="秋をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩_web.mp4" type="video/mp4">
+                                お使いのブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                         <div class="season-tracks">
                             <h3 class="season-title">秋の歌</h3>
@@ -260,6 +278,16 @@
                                         <p class="track-description">秋風が運ぶ懐かしい記憶</p>
                                     </div>
                                 </div>
+                                <div class="track">
+                                    <audio controls preload="none" aria-label="紅葉のささやき - 秋の楽曲">
+                                        <source src="./audio/紅葉のささやき.mp3" type="audio/mpeg">
+                                        お使いのブラウザは音声再生に対応していません。
+                                    </audio>
+                                    <div class="track-info">
+                                        <h4 class="track-title">紅葉のささやき</h4>
+                                        <p class="track-description">山もみじが奏でる秋の調べ</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -267,10 +295,16 @@
                     <!-- Winter Content -->
                     <div class="season-panel" id="winter-content" role="tabpanel" aria-labelledby="winter-tab" data-season="winter">
                         <div class="season-visual">
-                            <picture>
-                                <source srcset="./img/秀歌-冬.webp" type="image/webp">
-                                <img src="./img/秀歌-冬.webp" alt="冬をテーマにした秀歌の画像" loading="lazy" class="season-image" width="600" height="400">
-                            </picture>
+                            <video 
+                                class="season-video" 
+                                controls 
+                                preload="metadata"
+                                loading="lazy"
+                                tabindex="0"
+                                aria-label="冬をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩_web.mp4" type="video/mp4">
+                                お使いのブラウザは動画再生に対応していません。
+                            </video>
                         </div>
                         <div class="season-tracks">
                             <h3 class="season-title">冬の調べ</h3>
@@ -284,6 +318,16 @@
                                     <div class="track-info">
                                         <h4 class="track-title">白のなかで</h4>
                                         <p class="track-description">雪に包まれた静寂な世界</p>
+                                    </div>
+                                </div>
+                                <div class="track">
+                                    <audio controls preload="none" aria-label="雪景色の詩 - 冬の楽曲">
+                                        <source src="./audio/雪景色の詩.mp3" type="audio/mpeg">
+                                        お使いのブラウザは音声再生に対応していません。
+                                    </audio>
+                                    <div class="track-info">
+                                        <h4 class="track-title">雪景色の詩</h4>
+                                        <p class="track-description">純白の世界に響く優美な旋律</p>
                                     </div>
                                 </div>
                             </div>
