feat: enhance gallery UI with Japanese design principles and staggered animations

--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@
                                 preload="metadata"
                                 loading="lazy"
                                 tabindex="0"
+                                width="800"
+                                height="450"
+                                poster="./img/秀歌-春.webp"
                                 aria-label="春をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩.webm" type="video/webm">
                                 <source src="./video/夏庭園の詩.mp4" type="video/mp4">
                                 お使いのブラウザは動画再生に対応していません。
                             </video>
@@ -217,7 +221,11 @@
                                 preload="metadata"
                                 loading="lazy"
                                 tabindex="0"
+                                width="800"
+                                height="450"
+                                poster="./img/秀歌-夏.webp"
                                 aria-label="夏をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩_web.webm" type="video/webm">
                                 <source src="./video/夏庭園の詩_web.mp4" type="video/mp4">
                                 お使いのブラウザは動画再生に対応していません。
                             </video>
@@ -259,7 +267,11 @@
                                 preload="metadata"
                                 loading="lazy"
                                 tabindex="0"
+                                width="800"
+                                height="450"
+                                poster="./img/秀歌-秋.webp"
                                 aria-label="秋をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩_web.webm" type="video/webm">
                                 <source src="./video/夏庭園の詩_web.mp4" type="video/mp4">
                                 お使いのブラウザは動画再生に対応していません。
                             </video>
@@ -301,7 +313,11 @@
                                 preload="metadata"
                                 loading="lazy"
                                 tabindex="0"
+                                width="800"
+                                height="450"
+                                poster="./img/秀歌-冬.webp"
                                 aria-label="冬をテーマにしたデモ動画 - クリックまたはEnterキーで再生">
+                                <source src="./video/夏庭園の詩_web.webm" type="video/webm">
                                 <source src="./video/夏庭園の詩_web.mp4" type="video/mp4">
                                 お使いのブラウザは動画再生に対応していません。
                             </video>
