--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     </footer>
 
     <!-- Load non-critical CSS -->
+    <link rel="stylesheet" href="./css/components/sakura.css">
     <link rel="stylesheet" href="./styles.css">
     
     <!-- Three.js CDN -->
