Add seasonal header selector

--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
                     <li role="none"><a href="#about" role="menuitem">About</a></li>
                     <li role="none"><a href="#gallery" role="menuitem">Gallery</a></li>
                 </ul>
+                <div class="season-select">
+                    <label for="season-selector" class="sr-only">季節選択</label>
+                    <select id="season-selector" class="season-selector" aria-label="季節を変更">
+                        <option value="spring">🌸 春</option>
+                        <option value="tsuyu">☔️ 梅雨</option>
+                        <option value="summer">🌻 夏</option>
+                        <option value="autumn">🍁 秋</option>
+                        <option value="winter">❄️ 冬</option>
+                    </select>
+                </div>
             </div>
         </nav>
     </header>
