Add header season switcher and update mobile menu

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                     <li role="none"><a href="#home" role="menuitem">Home</a></li>
                     <li role="none"><a href="#about" role="menuitem">About</a></li>
                     <li role="none"><a href="#gallery" role="menuitem">Gallery</a></li>
+                    <li class="nav-seasons" role="none">
+                        <div class="header-seasons" id="header-seasons" aria-label="季節切り替え"></div>
+                    </li>
                 </ul>
             </div>
         </nav>
