--- a/index.html
+++ b/index.html
@@ -94,14 +94,13 @@
                     <li role="none"><a href="#gallery" role="menuitem">Gallery</a></li>
                 </ul>
                 <div class="season-select">
-                    <label for="season-selector" class="sr-only">季節選択</label>
-                    <select id="season-selector" class="season-selector" aria-label="季節を変更">
-                        <option value="spring">🌸 春</option>
-                        <option value="tsuyu">☔️ 梅雨</option>
-                        <option value="summer">🌻 夏</option>
-                        <option value="autumn">🍁 秋</option>
-                        <option value="winter">❄️ 冬</option>
-                    </select>
+                    <span id="season-selector-label" class="sr-only">季節選択</span>
+                    <div id="season-selector" class="season-selector-buttons" role="radiogroup" aria-labelledby="season-selector-label">
+                        <button type="button" class="season-option" data-season="spring">春</button>
+                        <button type="button" class="season-option" data-season="summer">夏</button>
+                        <button type="button" class="season-option" data-season="autumn">秋</button>
+                        <button type="button" class="season-option" data-season="winter">冬</button>
+                    </div>
                 </div>
             </div>
         </nav>
