Update canonical URL

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <meta name="format-detection" content="telephone=no">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://shuka-ai.com/">
+    <link rel="canonical" href="https://project-shuka.com/">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Shuka – 秀歌 | AI音楽アーティスト 公式サイト">
     <meta property="og:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
     <meta property="og:image" content="./img/秀歌.webp">
-    <meta property="og:url" content="https://shuka-ai.com/">
+    <meta property="og:url" content="https://project-shuka.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shuka – 秀歌">
     <meta property="og:locale" content="ja_JP">
