Update OGP image paths

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Shuka – 秀歌 | AI音楽アーティスト 公式サイト">
     <meta property="og:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta property="og:image" content="./img/秀歌.webp">
+    <meta property="og:image" content="https://project-shuka.com/img/秀歌.webp">
     <meta property="og:url" content="https://project-shuka.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shuka – 秀歌">
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Shuka – 秀歌 | AI音楽アーティスト">
     <meta name="twitter:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta name="twitter:image" content="./img/秀歌.webp">
+    <meta name="twitter:image" content="https://project-shuka.com/img/秀歌.webp">
     <meta name="twitter:creator" content="@shuka_artist">
     <meta name="twitter:site" content="@shuka_artist">
     
