--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.115.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.115.0/examples/js/loaders/STLLoader.js"></script>
     
-    <!-- Load JavaScript with defer for optimal performance -->
-    <script src="./scripts.js" defer></script>
+    <!-- Load JavaScript modules with defer for optimal performance -->
+    <script type="module" src="./scripts.js" defer></script>
     <script src="./three-lanterns.js" defer></script>
     
 </body>
