Implement mobile hamburger menu

--- a/index.html
+++ b/index.html
@@ -95,8 +95,13 @@
                         </a>
                     </h1>
                 </div>
-                
-                
+
+                <button class="nav-toggle" id="nav-toggle" aria-controls="nav-menu" aria-expanded="false" aria-label="メニューを開く">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+
                 <ul class="nav-menu" id="nav-menu" role="menubar">
                     <li role="none"><a href="#home" role="menuitem">Home</a></li>
                     <li role="none"><a href="#about" role="menuitem">About</a></li>
