--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
             window.scrollTo(0, 0);
         }
     </script>
+
+    <style>
+        #loader {
+            position: fixed;
+            inset: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #fdfaf5 url('./img/ローディング.png') center/cover no-repeat;
+            overflow: hidden;
+        }
+    </style>    
+
 </head>
 <body>
     <!-- Impressionistic Loader -->
