Add overlay for mobile navigation

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             </div>
         </nav>
     </header>
+    <div class="nav-overlay" id="nav-overlay" aria-hidden="true"></div>
 
     <main id="main-content">
         <!-- Hero Section -->
