Stop using minified scripts

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="./styles.min.css">
     <link rel="preload" href="./css/loader.min.css" as="style">
     <link rel="stylesheet" href="./css/loader.min.css">
-    <link rel="preload" href="./scripts.min.js" as="script">
+    <link rel="preload" href="./scripts.js" as="script">
 
     
     <!-- DNS prefetch for external resources if any -->
