--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <meta property="og:title" content="Shuka – 秀歌 | AI音楽アーティスト 公式サイト">
     <meta property="og:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
     <meta property="og:image" content="https://project-shuka.com/img/秀歌.webp">
+    <meta property="og:image:secure_url" content="https://project-shuka.com/img/秀歌.webp">
+    <meta property="og:image:type" content="image/webp">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+    <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像">
     <meta property="og:url" content="https://project-shuka.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shuka – 秀歌">
@@ -34,6 +39,7 @@
     <meta name="twitter:title" content="Shuka – 秀歌 | AI音楽アーティスト">
     <meta name="twitter:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
     <meta name="twitter:image" content="https://project-shuka.com/img/秀歌.webp">
+    <meta name="twitter:image:alt" content="Shuka – 秀歌 アーティスト画像">
     <meta name="twitter:creator" content="@shuka_artist">
     <meta name="twitter:site" content="@shuka_artist">
     
