SNS互換向上: OGPのJPEGフォールバック(1200x630 ogp.jpg)を追加し、Twitterカードに適用

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
     <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像">
+    <!-- JPEG fallback for broader SNS support -->
+    <meta property="og:image" content="https://project-shuka.com/img/ogp.jpg">
+    <meta property="og:image:secure_url" content="https://project-shuka.com/img/ogp.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像">
     <meta property="og:url" content="https://project-shuka.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shuka – 秀歌">
@@ -38,7 +45,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Shuka – 秀歌 | AI音楽アーティスト">
     <meta name="twitter:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta name="twitter:image" content="https://project-shuka.com/img/秀歌.webp">
+    <meta name="twitter:image" content="https://project-shuka.com/img/ogp.jpg">
     <meta name="twitter:image:alt" content="Shuka – 秀歌 アーティスト画像">
     <meta name="twitter:creator" content="@shuka_artist">
     <meta name="twitter:site" content="@shuka_artist">
