OGP: set WebP primary (img/%E7%A7%80%E6%AD%8C.webp, percent-encoded) and switch JPEG fallback to img/ogp_top.jpg (1200x630 top-aligned); update twitter:image; keep OG metadata (width/height/alt)

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Shuka – 秀歌 | AI音楽アーティスト 公式サイト">
     <meta property="og:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta property="og:image" content="https://project-shuka.com/img/秀歌.webp">
-    <meta property="og:image:secure_url" content="https://project-shuka.com/img/秀歌.webp">
+    <meta property="og:image" content="https://project-shuka.com/img/%E7%A7%80%E6%AD%8C.webp">
+    <meta property="og:image:secure_url" content="https://project-shuka.com/img/%E7%A7%80%E6%AD%8C.webp">
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
     <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像">
     <!-- JPEG fallback for broader SNS support -->
-    <meta property="og:image" content="https://project-shuka.com/img/ogp.jpg">
-    <meta property="og:image:secure_url" content="https://project-shuka.com/img/ogp.jpg">
+    <meta property="og:image" content="https://project-shuka.com/img/ogp_top.jpg">
+    <meta property="og:image:secure_url" content="https://project-shuka.com/img/ogp_top.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -45,7 +45,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Shuka – 秀歌 | AI音楽アーティスト">
     <meta name="twitter:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta name="twitter:image" content="https://project-shuka.com/img/ogp.jpg">
+    <meta name="twitter:image" content="https://project-shuka.com/img/%E7%A7%80%E6%AD%8C.webp">
     <meta name="twitter:image:alt" content="Shuka – 秀歌 アーティスト画像">
     <meta name="twitter:creator" content="@shuka_artist">
     <meta name="twitter:site" content="@shuka_artist">
