--- a/index.html
+++ b/index.html
@@ -23,22 +23,23 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Shuka – 秀歌 | AI音楽アーティスト 公式サイト">
     <meta property="og:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta property="og:image" content="https://project-shuka.com/img/ogp_square.jpg">
-    <meta property="og:image:secure_url" content="https://project-shuka.com/img/ogp_square.jpg">
+    <meta property="og:image" content="https://project-shuka.com/img/ogp_square_face.jpg?v=20250811-01">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
-    <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像（正方形）">
+    <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像（顔アップ・正方形）">
     <meta property="og:url" content="https://project-shuka.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shuka – 秀歌">
     <meta property="og:locale" content="ja_JP">
     
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Shuka – 秀歌 | AI音楽アーティスト">
     <meta name="twitter:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta name="twitter:image" content="https://project-shuka.com/img/ogp_square.jpg">
+    <meta name="twitter:image" content="https://project-shuka.com/img/ogp_square_face.jpg?v=20250811-01">
+    <meta name="twitter:image:width" content="1024">
+    <meta name="twitter:image:height" content="1024">
     <meta name="twitter:image:alt" content="Shuka – 秀歌 アーティスト画像">
     <meta name="twitter:creator" content="@shuka_artist">
     <meta name="twitter:site" content="@shuka_artist">
