OGP: switch to original WebP (img/%E7%A7%80%E6%AD%8C.webp) as square og:image; set type=image/webp; bump cache v

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Shuka – 秀歌 | AI音楽アーティスト 公式サイト">
     <meta property="og:description" content="四季をテーマにしたAI×和楽器サウンドで新しい音楽体験を">
-    <meta property="og:image" content="https://project-shuka.com/img/ogp_square_face.jpg?v=20250811-01">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image" content="https://project-shuka.com/img/%E7%A7%80%E6%AD%8C.webp?v=20250811-02">
+    <meta property="og:image:type" content="image/webp">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
-    <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像（顔アップ・正方形）">
-    <meta property="og:url" content="https://project-shuka.com/?v=20250811-01">
+    <meta property="og:image:alt" content="Shuka – 秀歌 アーティスト画像（正方形）">
+    <meta property="og:url" content="https://project-shuka.com/?v=20250811-02">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shuka – 秀歌">
     <meta property="og:locale" content="ja_JP">
