chore: loader.min.css の削除と参照置換、SW キャッシュ v3 へ更新、権限設定の重複削除\n\n- css: loader.min.css を削除し、index.html と sw.js の参照を loader.css へ統一\n- sw: Service Worker VERSION を v3 に上げキャッシュ更新を促進\n- docs: loader.css に日本語コメントを追加\n- config: .claude/settings.local.json の Read 重複を整理

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <link rel="preload" href="./img/ローディング.webp" as="image">
     <link rel="preload" href="./styles.css" as="style">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="preload" href="./css/loader.min.css" as="style">
-    <link rel="stylesheet" href="./css/loader.min.css">
+    <link rel="preload" href="./css/loader.css" as="style">
+    <link rel="stylesheet" href="./css/loader.css">
     <link rel="preload" href="./scripts.js" as="script">
 
     
