--- a/index.html
+++ b/index.html
@@ -335,6 +335,6 @@
       })();
     </script>
     
-    <script defer src="./js/loader.min.js"></script>
+    <script defer src="./js/loader.js"></script>
   </body>
   </html>
