--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2216%22>🌸</text></svg>">
     <link rel="apple-touch-icon" href="./img/秀歌.webp">
-    <link rel="manifest" href="./manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AI音楽アーティスト「Shuka – 秀歌」の公式サイト。四季をテーマにしたAI×和楽器サウンドで、日本の情緒と現代音楽を融合した新しい音楽体験をお届けします。">
     <meta name="keywords" content="AI音楽, 和楽器, 四季, Shuka, 秀歌, 日本音楽, アーティスト">
@@ -73,19 +72,16 @@
             history.replaceState(null, '', window.location.pathname);
             window.scrollTo(0, 0);
         }
-
-        // Service Worker registration
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then(registration => {
-                        console.log('SW registered: ', registration);
-                    })
-                    .catch(registrationError => {
-                        console.log('SW registration failed: ', registrationError);
-                    });
-            });
-        }
+    </script>
+    <script>
+        // One-time cleanup: unregister any existing service workers
+        (function(){
+          if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.getRegistrations()
+              .then(regs => Promise.all(regs.map(r => r.unregister())))
+              .catch(() => {});
+          }
+        })();
     </script>
 
     <style>
