feat: simplify seasonal effects and remove form handling logic

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
     <!-- Load non-critical CSS -->
     
     <!-- Load JavaScript with defer for optimal performance -->
+    <script src="./seasonal-effects.js" defer></script>
     <script src="./scripts.js" defer></script>
     
     <!-- Conditional lazy loader for Three.js stack -->
