refactor: revise hero section layout and content styling for improved visual hierarchy

--- a/index.html
+++ b/index.html
@@ -165,13 +165,16 @@
         <!-- Hero Section -->
         <section class="hero" id="home" aria-labelledby="hero-title">
             <div class="hero-content">
-                <h2 id="hero-title" class="hero-title">四季を奏でる<br>AI 音楽アーティスト<br><span class="artist-name">Shūka <span class="jp">– 秀歌</span></span></h2>
-                <p class="hero-subtitle">日本の情緒と現代サウンドデザインが織りなす<br>新しい音楽体験</p>
+                <h2 id="hero-title" class="hero-title">
+                    <span class="artist-name">Shūka <span class="jp">- 秀歌</span></span>
+                    <span class="tagline">四季を奏でる<br>AI音楽アーティスト</span>
+                </h2>
+                <p class="hero-subtitle">日本の情緒と現代サウンドが響き合う、新しい音楽体験</p>
                 <div class="hero-actions">
-                    <button class="cta-button primary" data-scroll-target="gallery" aria-label="季節のギャラリーを見る">
-                        季節のギャラリーを体験する
+                    <button class="cta-button primary" data-scroll-target="gallery" aria-label="ギャラリーを見る">
+                        ギャラリーを見る
                     </button>
-                    <button class="cta-button secondary" data-scroll-target="about" aria-label="アーティストについて詳しく見る">
+                    <button class="cta-button secondary" data-scroll-target="about" aria-label="アーティストについて">
                         アーティストについて
                     </button>
                 </div>
@@ -185,22 +188,25 @@
                     <div class="about-text">
                         <h2 id="about-title" class="section-title">About Shūka</h2>
                         <p class="about-intro">
-                            AI技術と日本の伝統的な美意識を融合させ、四季の移ろいを音楽で表現するアーティスト「Shūka – 秀歌」。
-                            現代のサウンドデザインと和楽器の音色が織りなす、新しい音楽体験をお届けします。
+                            Shūka - 秀歌 は、AIと日本の伝統美を重ね合わせ、四季のうつろいを音楽と映像で描くアーティストです。<br>
+                            藍の浴衣に白椿を添えた姿で現れるその存在は、人ではなく、自然の中にふと現れる精霊のよう。
+                        </p>
+                        <p>
+                            和楽器と現代のサウンドが溶け合う楽曲は、日本の四季の情景を描き、静けさや余白までも音楽として紡ぎます。
                         </p>
                         
                         <div class="features">
                             <div class="feature">
                                 <h3 class="feature-title">AI × 和楽器</h3>
-                                <p>最先端のAI技術と伝統的な和楽器の音色を融合し、新しい音楽の可能性を探求しています。</p>
+                                <p>最先端のAI技術と伝統的な和の音色を融合。</p>
                             </div>
                             <div class="feature">
                                 <h3 class="feature-title">四季の表現</h3>
-                                <p>日本の美しい四季の移ろいを音楽で表現し、季節ごとの情感豊かな楽曲を制作しています。</p>
+                                <p>春夏秋冬それぞれの情緒を音楽と映像で描写。</p>
                             </div>
                             <div class="feature">
                                 <h3 class="feature-title">現代と伝統の調和</h3>
-                                <p>現代のサウンドデザインと日本の伝統美が調和した、唯一無二の音楽世界を創造しています。</p>
+                                <p>新しいのに懐かしい、唯一無二の音楽体験を届けます。</p>
                             </div>
                         </div>
                     </div>
