--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2216%22>🌸</text></svg>">
-    <link rel="apple-touch-icon" href="./assets/images/portraits/秀歌.webp">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/icons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/icons/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="音楽アーティスト「Shūka – 秀歌」の公式サイト。四季をテーマにした和楽器サウンドで、日本の情緒と現代音楽を融合した新しい音楽体験をお届けします。">
     <meta name="keywords" content="音楽, 和楽器, 四季, Shūka, 秀歌, 日本音楽, アーティスト">
