style: redesign season buttons with horizontal layout and responsive sizing

--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
                     <div class="about-text">
                         <h2 id="about-title" class="section-title">About Shūka</h2>
                         <p class="about-intro">
-                            秀歌 - Shūka は、現代技術と日本の伝統美を重ね合わせ、四季のうつろいを音楽と映像で描くアーティストです。<br>
-                            藍の浴衣に白椿を添えた姿で現れるその存在は、人ではなく、自然の中にふと現れる精霊のよう。
+                            秀歌 - Shūka は、現代技術と日本の伝統美を重ね合わせ、四季のうつろいを音楽と映像で描くアーティストです。
                         </p>
                         <p>
                             和楽器と現代のサウンドが溶け合う楽曲は、日本の四季の情景を描き、静けさや余白までも音楽として紡ぎます。
